--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta data-n-head="ssr" name="viewport" content="width=device-width,initial-scale=1">
   <meta data-n-head="ssr" data-hid="description" name="description" content="">
   <meta data-n-head="ssr" name="format-detection" content="telephone=no">
-  <meta name="keywords" content="car_rent">
+  <meta name="keywords" content="car_rent,portfolio_car,portfolio car rent">
   <meta name="description" content="nuxt_car_rent 개인 포토폴리오 작업페이지입니다.">
   <base href="/nuxt_car_rent/">
   <link data-n-head="ssr" rel="icon" type="image/x-icon" href="/favicon.ico">
