키워드 수정

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta data-n-head="ssr" name="viewport" content="width=device-width,initial-scale=1">
   <meta data-n-head="ssr" data-hid="description" name="description" content="">
   <meta data-n-head="ssr" name="format-detection" content="telephone=no">
-  <meta name="keywords" content="car_rent,portfolio_car,portfolio car rent, 자동차렌탈포폴사이트, nuxt use portfolio, 개인포폴차렌탈">
+  <meta name="keywords" content="car rent,portfolio car,portfolio car rent, 자동차렌탈포폴사이트, nuxt use portfolio, 개인포폴차렌탈">
   <meta name="description" content="nuxt_car_rent 개인 포토폴리오 작업페이지입니다.">
   <meta property="og:title" content="자동차렌탈포폴사이트" /> <!-- 카드에 표시하고 싶은 제목 -->
   <meta property="og:image" content="./images/contents/car_1.png" /> <!-- 카드에 표시하고 싶은 이미지 -->
