meta태그 다시 추가

--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
   <meta data-n-head="ssr" name="format-detection" content="telephone=no">
   <meta name="keywords" content="car rent,portfolio car,portfolio car rent, 자동차렌탈포폴사이트, nuxt use portfolio, 개인포폴차렌탈">
   <meta name="description" content="nuxt_car_rent 개인 포토폴리오 작업페이지입니다.">
-  <meta property="og:title" content="자동차렌탈포폴사이트" /> <!-- 카드에 표시하고 싶은 제목 -->
-  <meta property="og:image" content="./images/contents/car_1.png" /> <!-- 카드에 표시하고 싶은 이미지 -->
-  <meta property="og:description" content="개인포폴을 위한 클론코딩 사이트" /> <!-- 카드에 표시하고 싶은 설명 -->
+  <meta property="og:title" content="자동차렌탈포폴사이트" />
+  <meta property="og:description" content="개인포폴을 위한 클론코딩 사이트" />
   <base href="./">
   <link data-n-head="ssr" rel="icon" type="image/x-icon" href="/favicon.ico">
   <link rel="preload" href="./_nuxt/bbd83d6.js" as="script">
